2006-04-06  Stepan Kasal  <kasal@ucw.cz>

	* lib/autoconf/general.m4 (AC_PRESERVE_HELP_ORDER): Do not define
	  _AC_PRESERVE_HELP_ORDER, ...
	(AC_ARG_ENABLE, AC_ARG_WITH): ... use AC_PROVIDE_IFELSE insetad.

	* lib/autoconf/general.m4 (AC_ARG_VAR): Do not use m4_divert_once
	  inside m4_expand_once; it is redundant.

	* lib/autoconf/general.m4 (_AC_INIT_HELP): Remove the broken support
	  for --help from Cygnus `configure.'

2006-04-06  Paul Eggert  <eggert@cs.ucla.edu>

	* doc/autoconf.texi (C Compiler): Warn about #error.  Follows up
	on a patch proposed by Ralf Wildenhues.

2006-04-05  Paul Eggert  <eggert@cs.ucla.edu>

	* lib/autoconf/status.m4: Replace <space>''<tab> with
	<tab><space> where this makes sense.

2006-04-05  Howard Chu  <hyc@highlandsun.com>  (trivial change)
	    Noah Misch  <noah@cs.caltech.edu>

	* lib/autoconf/general.m4 (AC_PRESERVE_HELP_ORDER): New macro.
	(AC_ARG_ENABLE, AC_ARG_WITH): Adjust.
	* doc/autoconf.texi (Help Formatting): New node.
	* NEWS: Announce AC_PRESERVE_HELP_ORDER.

2006-04-05  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* TODO, config/Makefile.am, lib/freeze.mk, lib/autoconf/c.m4,
	lib/autoconf/specific.m4, lib/autoconf/status.m4,
	lib/autoconf/types.m4, lib/autotest/general.m4,
	tests/mktests.sh, tests/torture.at: White space cleanup:
	remove some SPACE before TAB, or add quoting ('' or @&t@).

	* NEWS, TODO, bin/autoreconf.in: `filesystem' -> `file system'.

	* doc/autoconf.texi (Shell Substitutions): Document `^' vs. `|'.

2006-04-05  Eric Blake  <ebb9@byu.net>

	* lib/autotest/general.m4 (AT_INIT): Prep AT_*_all, so that an
	empty test suite works.
	* tests/autotest.at (Empty test suite): Remove xfail.

2006-04-05  Noah Misch  <noah@cs.caltech.edu>

	* lib/autoconf/status.m4 (_AC_CONFIG_FOOS): Do not append normalized
	TAGS to ac_config_<foo>s.
	(AC_CONFIG_FILES, AC_CONFIG_HEADERS, AC_CONFIG_LINKS): Do so here.
	(AC_CONFIG_COMMANDS): Append NAME to ac_config_commands without